--- a/map1.html
+++ b/map1.html
@@ -24,16 +24,9 @@
     <script src="lib/modernizr.svg.min.js"></script>
     <script src="lib/topojson.v1.min.js"></script>
     <script src="lib/pym.min.js"></script>
-    <script src="js/urbanmap.js"></script>
+    <script src="js/uncertaintymap.js"></script>
 
     <script>
-        data_url = "data/pov13_counties.csv",
-            valuetomap = "pov",
-            countyid = "countyfip",
-            colors = ['rgb(247,251,255)','rgb(222,235,247)','rgb(198,219,239)','rgb(158,202,225)','rgb(107,174,214)','rgb(66,146,198)','rgb(33,113,181)','rgb(8,81,156)','rgb(8,48,107)'],
-            breaks = [0.05,0.1,0.15,0.2,0.25,0.3,0.35, 0.4],
-            legend_breaks = breaks;
-
         var pymChild = new pym.Child();
     </script>
 
