--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Explaining Uncertainty</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <style>
         @import url("http://fonts.googleapis.com/css?family=Lato");
         body {
@@ -22,11 +23,19 @@
 </head>
 
 <body>
-    <h1>Explaining uncertainty - 2013 poverty rates</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>Explaining uncertainty - 2013 poverty rates</h1>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <div id="map1" class="map"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div id="map1" class="map"></div>
 
+            </div>
+        </div>
+    </div>
+
+    <script src="lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/pym.min.js"></script>
     <script>
         var pymParent = new pym.Parent('map1', 'map1.html', {});
