--- a/map1.html
+++ b/map1.html
@@ -5,11 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">    
     <link rel="stylesheet" type="text/css" href="css/maps.css">
 </head>
 
 <body>
 
+    <button type="button" class="btn btn-start" id="randbtn">Randomize</button>
     <div id="legend"></div>
     <div id="map"><img src="img/fallback1.png" alt="[Map]" />
     </div>
@@ -20,6 +22,7 @@
     </div>
 
     <script src="lib/jquery.min.js"></script>
+    <script src="lib/bootstrap.min.js"></script>
     <script src="lib/d3.min.js" charset="utf-8"></script>
     <script src="lib/modernizr.svg.min.js"></script>
     <script src="lib/topojson.v1.min.js"></script>
