--- a/povertymap.html
+++ b/povertymap.html
@@ -11,7 +11,6 @@
 
 <body>
 
-    <button type="button" class="btn btn-start" id="randbtn">Randomize</button>
     <div id="legend"></div>
     <div id="map"><img src="img/fallback1.png" alt="[Map]" />
     </div>
@@ -27,7 +26,7 @@
     <script src="lib/modernizr.svg.min.js"></script>
     <script src="lib/topojson.v1.min.js"></script>
     <script src="lib/pym.min.js"></script>
-    <script src="js/uncertaintymap.js"></script>
+    <script src="js/povertymap.js"></script>
 
     <script>
         var pymChild = new pym.Child();
