style and titles

--- a/animatedmap.html
+++ b/animatedmap.html
@@ -11,6 +11,7 @@
 
 <body>
 
+    <h2>Random within bounds</h2>
     <div id="legend"></div>
     <div id="map"><img src="img/fallback1.png" alt="[Map]" />
     </div>
