--- a/povertymap.html
+++ b/povertymap.html
@@ -12,6 +12,7 @@
 <body>
 
     <h2>Estimates</h2>
+    <button type="button" class="btn btn-start" id="randbtn">Randomize</button>
     <div id="legend"></div>
     <div id="map"><img src="img/fallback1.png" alt="[Map]" />
     </div>
