--- a/povertymap.html
+++ b/povertymap.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h2>Estimates</h2>
+    <h2>Button</h2>
     <button type="button" class="btn btn-start" id="randbtn">Randomize</button>
     <div id="legend"></div>
     <div id="map"><img src="img/fallback1.png" alt="[Map]" />
