--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="col-lg-12">
                 <h1>Explaining uncertainty - 2013 poverty rates</h1>
 
-                <div id="animatedmap" class="pym"></div>
+                <!--div id="animatedmap" class="pym"></div-->
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
@@ -39,10 +39,9 @@
 
                 <div id="mapholder">
                     <h2>25% Threshold</h2>
-                    <div id="maplo" class="threshmaps"><img src="img/fallback1.png" alt="[Map]" /> </div>
-                    <div id="mapest" class="threshmaps"><img src="img/fallback1.png" alt="[Map]" />
-                    </div>
-                    <div id="maphi" class="threshmaps"><img src="img/fallback1.png" alt="[Map]" />
+                    <img src="img/map_lo.png" class="threshmaps" alt="map of lower bound > 25% poverty, by county">
+                    <img src="img/map_estimate.png" class="threshmaps" alt="map of estimate > 25% poverty, by county">
+                    <img src="img/map_hi.png" class="threshmaps" alt="map of upper bound > 25% poverty, by county">
                     </div>
                 </div>
 
@@ -59,11 +58,11 @@
     <script src="lib/topojson.v1.min.js"></script>
     <script src="lib/pym.min.js"></script>
 
-    <script src="js/thresholdmaps.js"></script>
+    <!--script src="js/thresholdmaps.js"></script-->
 
 
     <script>
-        var pym1 = new pym.Parent('animatedmap', 'animatedmap.html', {});
+        //var pym1 = new pym.Parent('animatedmap', 'animatedmap.html', {});
         var pym2 = new pym.Parent('povertymap', 'povertymap.html', {});
     </script>
 </body>
