two button click actions, adjust colors, separate threshold html

--- a/povertymap.html
+++ b/povertymap.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">    
     <link rel="stylesheet" type="text/css" href="css/maps.css">
 </head>
 
 <body>
 
-    <h2>Button</h2>
     <button type="button" class="btn btn-start" id="randbtn">Randomize</button>
     <div id="legend"></div>
     <div id="map"><img src="img/fallback1.png" alt="[Map]" />
