--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Explaining Uncertainty</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/maps.css">
     <style>
@@ -38,24 +39,29 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
                 <div id="mapholder">
-                    <h2>25% Threshold</h2>
-                    <img src="img/map_lo.png" class="threshmaps" alt="map of lower bound > 25% poverty, by county">
-                    <img src="img/map_estimate.png" class="threshmaps" alt="map of estimate > 25% poverty, by county">
-                    <img src="img/map_hi.png" class="threshmaps" alt="map of upper bound > 25% poverty, by county">
+                    <div class="col-lg-4">
+                        <h4 class="title">Lower Bound</h4>
+                        <img src="img/map_lo.png" alt="map of lower bound > 25% poverty, by county">
+                    </div>
+                    <div class="col-lg-4">
+                        <h4 class="title">Estimate</h4>
+                        <img src="img/map_estimate.png" alt="map of estimate > 25% poverty, by county">
+                    </div>
+                    <div class="col-lg-4">
+                        <h4 class="title">Upper Bound</h4>
+                        <img src="img/map_hi.png" alt="map of upper bound > 25% poverty, by county">
                     </div>
                 </div>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
             </div>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
         </div>
+    </div>
     </div>
 
     <script src="lib/jquery.min.js"></script>
     <script src="lib/bootstrap.min.js"></script>
-    <script src="lib/modernizr.svg.min.js"></script>
-    <script src="lib/d3.min.js" charset="utf-8"></script>
-    <script src="lib/topojson.v1.min.js"></script>
     <script src="lib/pym.min.js"></script>
 
     <!--script src="js/thresholdmaps.js"></script-->
