text/link styles

--- a/povertymap.html
+++ b/povertymap.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">    
+
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,600,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/maps.css">
 </head>
 
@@ -16,10 +19,12 @@
     <div id="map"><img src="img/fallback1.png" alt="[Map]" />
     </div>
     <div class="footnote">
-        <p><b>Source</b>: <a href="http://www.census.gov/did/www/saipe/data/statecounty/data/2013.html">Census Bureau Small Area Income and Poverty Estimates</a>
-            <a href="http://www.urban.org" target="_blank" class="urban"><span style="color:#1696d2">Urban</span> <span style="color:#000">Institute</span></a>
-        </p>
+        <b>Source</b>: <a target="_blank" href="http://www.census.gov/did/www/saipe/data/statecounty/data/2013.html">Census Bureau Small Area Income and Poverty Estimates</a>
+            <a class="tag" href="http://www.urban.org/">
+                <span id="urban">URBAN</span>&nbsp;INSTITUTE</a>
     </div>
+
+
 
     <script src="lib/jquery.min.js"></script>
     <script src="lib/bootstrap.min.js"></script>
