--- a/povertymap.html
+++ b/povertymap.html
@@ -20,7 +20,7 @@
     </div>
     <div class="footnote">
         <b>Source</b>: <a target="_blank" href="http://www.census.gov/did/www/saipe/data/statecounty/data/2013.html">Census Bureau Small Area Income and Poverty Estimates</a>
-            <a class="tag" href="http://www.urban.org/">
+            <a class="tag" target="_blank" href="http://www.urban.org/">
                 <span id="urban">URBAN</span>&nbsp;INSTITUTE</a>
     </div>
 
