--- a/index.html
+++ b/index.html
@@ -28,13 +28,24 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Explaining uncertainty - 2013 poverty rates</h1>
+                <h1>Explaining Uncertainty with Poverty Rates</h1>
 
                 <!--div id="animatedmap" class="pym"></div-->
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-                <div id="povertymap" class="pym"></div>
+                <div class="col-md-6">
+                    <div id="povertymap" class="pym"></div>
+                </div>
+                <div class="col-md-6">
+                    <div id="animatedmap" class="pym"></div>
+                </div>
+                
+                <div class="footnote">
+                    <b>Source</b>: <a target="_blank" href="http://www.census.gov/did/www/saipe/data/statecounty/data/2013.html">Census Bureau Small Area Income and Poverty Estimates</a>
+                    <a class="tag" target="_blank" href="http://www.urban.org/">
+                        <span id="urban">URBAN</span>&nbsp;INSTITUTE</a>
+                </div>
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
@@ -68,8 +79,8 @@
 
 
     <script>
-        //var pym1 = new pym.Parent('animatedmap', 'animatedmap.html', {});
-        var pym2 = new pym.Parent('povertymap', 'povertymap.html', {});
+        var pym1 = new pym.Parent('povertymap', 'povertymap.html', {});
+        var pym2 = new pym.Parent('animatedmap', 'animatedmap.html', {});
     </script>
 </body>
 
