--- a/animatedmap.html
+++ b/animatedmap.html
@@ -8,12 +8,15 @@
 
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,600,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/urban-text.css">
     <link rel="stylesheet" type="text/css" href="css/maps.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    
 </head>
 
 <body>
-    <!--button type="button" class="btn btn-start" id="randbtn">Randomize</button-->
+
+    <div id="legend-space"></div>
     <h4 class="title">Values randomized within margin of error</h4>
     <div id="map" class="map"><img src="img/fallback1.png" alt="[Map]" />
     </div>
