--- a/povertymap.html
+++ b/povertymap.html
@@ -8,13 +8,15 @@
 
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,600,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/urban-text.css">
     <link rel="stylesheet" type="text/css" href="css/maps.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+
 </head>
 
 <body>
 
-    <!--div id="legend"></div-->
+    <div id="legend"></div>
     <h4 class="title">Estimated poverty rates</h4>
     <div id="map" class="map"><img src="img/fallback1.png" alt="[Map]" />
     </div>
