bring back animation button, adjust legend

--- a/animatedmap.html
+++ b/animatedmap.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" type="text/css" href="css/urban-text.css">
     <link rel="stylesheet" type="text/css" href="css/maps.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    
+
 </head>
 
 <body>
 
-    <div id="legend-space"></div>
+    <button type="button" class="btn btn-start" id="randbtn">Play</button>
     <h4 class="title">Values randomized within margin of error</h4>
     <div id="map" class="map"><img src="img/fallback1.png" alt="[Map]" />
     </div>
