--- a/animatedmap.html
+++ b/animatedmap.html
@@ -15,8 +15,9 @@
 </head>
 
 <body>
-
-    <button type="button" class="btn btn-start" id="randbtn">Play</button>
+    <div id="legend-space">
+        <button type="button" class="btn btn-start" id="randbtn">Play</button>
+    </div>
     <h4 class="title">Values randomized within margin of error</h4>
     <div id="map" class="map"><img src="img/fallback1.png" alt="[Map]" />
     </div>
