--- a/animatedmap.html
+++ b/animatedmap.html
@@ -18,7 +18,7 @@
     <div id="legend-space">
         <button type="button" class="btn btn-start" id="randbtn">Play</button>
     </div>
-    <h4 class="title">Values randomized within margin of error</h4>
+    <h4 class="title">Values randomized within margin of sampling error</h4>
     <div id="map" class="map"><img src="img/fallback1.png" alt="[Map]" />
     </div>
 
