--- a/animatedmap.html
+++ b/animatedmap.html
@@ -16,7 +16,7 @@
 
 <body>
     <div id="legend-space">
-        <button type="button" class="btn btn-start" id="randbtn">Play</button>
+        <button type="button" class="urban-button" id="randbtn">Play</button>
     </div>
     <h4 class="title">Values randomized within margin of sampling error</h4>
     <div id="map" class="map"><img src="img/fallback1.png" alt="[Map]" />
