--- a/animatedmap.html
+++ b/animatedmap.html
@@ -19,7 +19,7 @@
         <button type="button" class="urban-button" id="randbtn">Play</button>
     </div>
     <h4 class="title">Values randomized within margin of sampling error</h4>
-    <div id="map" class="map"><img src="img/fallback1.png" alt="[Map]" />
+    <div id="map" class="map"><img src="img/animated.png" alt="Map of poverty rates by county, randomized within error bounds"/>
     </div>
 
 
