--- a/povertymap.html
+++ b/povertymap.html
@@ -16,9 +16,9 @@
 
 <body>
 
-    <div id="legend"></div>
+    <div id="legend"><img src="img/legend.png" alt="Legend for map - breaks every 5%" /></div>
     <h4 class="title">Estimated poverty rates</h4>
-    <div id="map" class="map"><img src="img/fallback1.png" alt="[Map]" />
+    <div id="map" class="map"><img src="img/estimate.png" alt="Map of poverty rates by county" />
     </div>
 
     <script src="lib/jquery.min.js"></script>
