left margin for big frame

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         @media (min-width: 960px) {
             #maps {
                 width: 960px;
-                /*margin-left: -190px;*/
+                margin-left: -190px;
                 display: block;
                 height: 100%;
             }
